# RetroSync

./: .gitignore  README.md  pyproject.toml
docs/: architecture.mermaid  emudeck-sync-design.md  imaging.md  n64-sync-design.md  pocket-sync-design.md
install/: setup-deck.sh  setup.sh  upgrade.sh
install/networkmanager/: 99-retrosync
install/scripts/: es-de-game-end.sh  es-de-game-start.sh
install/systemd/: retrosync-pocket-sync@.service  retrosync.service  sni.service
install/systemd-user/: retrosync-reconnect.service  retrosyncd-deck.service  retrosyncd-suspend.service
install/udev/: 99-retrosync-everdrive64.rules  99-retrosync-fxpak.rules  99-retrosync-pocket.rules
retrosync/: __init__.py  cli.py  cloud.py  cloud_mirror.py  config.py  conflicts.py  daemon.py  filename_map.py  game_id.py  inotify_orchestrator.py  inotify_watch.py  lease_tracker.py  leases.py  load.py  migrate.py  orchestrator.py  promote.py  state.py  sync.py  system_formats.py
retrosync/deck/: __init__.py  add_source.py  emudeck_paths.py  flush.py  srm.py  systems.py  wrap.py
retrosync/formats/: __init__.py  n64.py
retrosync/pocket/: __init__.py  sync_runner.py
tests/: _websockets_stub.py  dry_run.py  fake_rclone.sh  fake_usb2snes.py  mock_source.py  test_cloud_wins_diverged.py  test_config_find_path.py  test_deck_add_source.py  test_emudeck.py  test_everdrive64.py  test_filename_map.py  test_game_id.py  test_in_sync_drift_heal.py  test_inotify_watch.py  test_krikzz_ftdi.py  test_leases.py  test_load.py  test_migrate.py  test_pocket.py  test_promote.py  test_pull_self_heal.py  test_srm_patcher.py  test_sync_engine.py
(+12 files in other folders)
